--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -22,8 +22,6 @@
   }
 }
 
-
-
 html,
 body {
   @apply bg-white dark:bg-gray-900;
@@ -34,11 +32,14 @@ body {
   }
 }
 .b-root {
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
+    color: var(--color-gray-950);
+    background-color: var(--color-stone-100);
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    border-radius: 8px;
 }
-.b-root::-webkit-scrollbar{width:10px; background-color: transparent}
-.b-root::-webkit-scrollbar-thumb:hover{background-color: var(--color-stone-400)}
+.b-root::-webkit-scrollbar{width:10px; background-color: transparent;}
+.b-root::-webkit-scrollbar-thumb:hover{background-color: var(--color-stone-600)}
 .b-root::-webkit-scrollbar-thumb{
   border-left:none;
   border-radius: 5px;
